<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- AppBarLayout的直接子控件可以设置的属性:layout_scrollFlags(滚动模式) -->
    <!-- 1.scroll|exitUntilCollapsed:如果AppBarLayout的直接子控件设置该属性,该子控件可以滚动,向上滚动NestedScrollView出父布局(一般为CoordinatorLayout)时,会折叠到顶端,向下滚动时NestedScrollView必须滚动到最上面的时候才能拉出该布局
         2.scroll|enterAlways:只要向下滚动该布局就会显示出来,只要向上滑动该布局就会向上收缩
         3.scroll|enterAlwaysCollapsed:向下滚动NestedScrollView到最底端时该布局才会显示出来
         4.scroll|snap:表示一个吸附效果，可以确保childView不会滑动停止在中间的状态
         5.如果不设置该属性,则该布局不能滑动 -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">


        <!-- CollapsingToolbarLayout的直接子布局可以使用的属性:layout_collapseMode(折叠模式) -->
        <!-- 1.pin:在滑动过程中,此自布局会固定在它所在的位置不动,直到CollapsingToolbarLayout全部折叠或者全部展开
             2.parallax:视差效果,在滑动过程中,不管上滑还是下滑都会有视察效果,不知道什么事视察效果自己看gif图(layout_collapseParallaxMultiplier视差因子 0~1之间取值,当设置了parallax时可以配合这个属性使用,调节自己想要的视差效果)
             3.不设置:跟随NestedScrollView的滑动一起滑动,NestedScrollView滑动多少距离他就会跟着走多少距离 -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vip_head_layout_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:collapsedTitleTextAppearance="@style/ToolBar.TitleText"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle.About"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/vip_head_layout_height"
                android:fitsSystemWindows="true">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_vip_header_bg">


                    <ImageView
                        android:id="@+id/vip_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/vip_head_image_margin_top"
                        android:src="@drawable/ic_vip_open" />

                    <LinearLayout
                        android:id="@+id/vip_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/vip_image"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vip_message_1"
                            android:textColor="@color/white"
                            android:textSize="@dimen/default_small_text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_tiny_margin"
                            android:layout_marginStart="@dimen/default_tiny_margin"
                            android:text="@string/vip"
                            android:textColor="@color/white"
                            android:textSize="@dimen/default_big_large_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vip_message_2"
                            android:textColor="@color/white"
                            android:textSize="@dimen/default_small_text_size" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/vip_layout"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/default_tiny_margin"
                        android:text="@string/vip_message_3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_tiny_text_size" />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_button_height"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/default_general_margin"
                        android:background="@drawable/vip_btn_bg"
                        android:text="@string/vip_immediately_opened"
                        android:textColor="@color/vip_button_text_color"
                        android:textSize="@dimen/default_small_text_size" />


                </RelativeLayout>


            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:contentInsetStart="@dimen/vip_toolbar_title_margin_start"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextAppearance="@style/ToolBar.TitleText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vip"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_medium_text_size" />


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none" />

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>